--- a/Vegan.Web/Web.config
+++ b/Vegan.Web/Web.config
@@ -13,13 +13,13 @@
   <!--<connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-Vegan.Web-20200502114658.mdf;Initial Catalog=aspnet-Vegan.Web-20200502114658;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>-->
-  <appSettings>
+ <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="Email" value="veganeshopproject@gmail.com" />
-    <add key="Password" value="veganeshopproject@2020" />
+    <add key="Email" value="YOUR_EMAIL" />
+    <add key="Password" value="YOUR_PASSWORD" />
   </appSettings>
   <system.web>
     <authentication mode="None" />
@@ -109,11 +109,11 @@
   </connectionStrings>
 
 
-  <paypal>
+   <paypal>
     <settings>
       <add name="mode" value="sandbox" />
-      <add name="clientid" value="AQYqrqBoe943atPJd6TylxomZplkwH34lGaw6unV9vN9hc_BH5iA-7UIU1aXeH32MugiCa-Szvl2Bod-" />
-      <add name="clientsecret" value="ELYQ9TyeMa0DWX5lMf-wQDhuhmA0sX3jNt4xESayOZtncz_7-oDOFrYADC1ZJbcOmCI9MzgB_e5uvs9N" />
+      <add name="clientId" value="__CLIENT_ID__" />
+      <add name="clientSecret" value="__CLIENT_SECRET__" />
     </settings>
   </paypal>
   
